--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
-django
+django~=3.2.3
 django-heroku
 gunicorn
 django_compressor
+pip~=21.1.1
+pytz~=2021.1
+sqlparse~=0.4.1
+psycopg2~=2.8.6
+asgiref~=3.3.4
+certifi~=2020.12.5
+chardet~=4.0.0
+urllib3~=1.26.4
+six~=1.16.0
+idna~=2.10
+setuptools~=56.2.0
+requests~=2.25.1
+dicttoxml~=1.7.4
